# openglsdlexample

./: CMakeLists.txt  README.md  simple-example.cpp
shaders/: example.frag  example.vert
